create new_feature() for combine new feature and move new feature into new_feature

--- a/source_code/feature_extraction_and_model.ipynb
+++ b/source_code/feature_extraction_and_model.ipynb
@@ -499,39 +499,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
-      "id": "9W5C5wxlmqt_",
-      "metadata": {
-        "id": "9W5C5wxlmqt_"
-      },
-      "outputs": [],
-      "source": [
-        "def url_count(text):\n",
-        "    text = str(text)\n",
-        "    pattern = re.compile(\n",
-        "        r\"(https?://\\S+|www\\.\\S+|\\b\\S+\\.(com|net|org|info|biz|co|io|xyz)\\b)\",\n",
-        "        re.IGNORECASE\n",
-        "    )\n",
-        "    return len(pattern.findall(text))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 30,
-      "id": "iWM9DcO2mwSU",
-      "metadata": {
-        "id": "iWM9DcO2mwSU"
-      },
-      "outputs": [],
-      "source": [
-        "def currency_symbol_count(text):\n",
-        "    text = str(text)\n",
-        "    pattern = re.compile(r\"[$€£¥฿]\")\n",
-        "    return len(pattern.findall(text))"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 31,
       "id": "2fhinp8lm09Y",
       "metadata": {
@@ -564,7 +531,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "id": "34ace0a7-d7a4-40fe-974c-c587f7deb8ef",
       "metadata": {
         "id": "34ace0a7-d7a4-40fe-974c-c587f7deb8ef"
@@ -576,8 +543,6 @@
         "    data['pronoun_density'] = data['Subject'].apply(pronoun_density)+data['Body'].apply(pronoun_density)\n",
         "    data['sentence_complexity_ratio'] = data['Subject'].apply(sentence_complexity_ratio)+data['Body'].apply(sentence_complexity_ratio)\n",
         "    data['average_sentence_length'] = data['Subject'].apply(average_sentence_length)+data['Body'].apply(average_sentence_length)\n",
-        "    data['url_count'] = data['Subject'].apply(url_count)+data['Body'].apply(url_count)\n",
-        "    data['currency_symbol_count'] = data['Subject'].apply(currency_symbol_count)+data['Body'].apply(currency_symbol_count)\n",
         "    data['uppercase_word_ratio'] = data['Subject'].apply(uppercase_word_ratio)+data['Body'].apply(uppercase_word_ratio)\n",
         "    return data"
       ]
@@ -794,6 +759,75 @@
       },
       "source": [
         "# Add on Feature Extraction"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "907db010",
+      "metadata": {},
+      "source": [
+        "## List new Feature Extraction"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "0454e42a",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def url_count(text):\n",
+        "    text = str(text)\n",
+        "    pattern = re.compile(\n",
+        "        r\"(https?://\\S+|www\\.\\S+|\\b\\S+\\.(com|net|org|info|biz|co|io|xyz)\\b)\",\n",
+        "        re.IGNORECASE\n",
+        "    )\n",
+        "    return len(pattern.findall(text))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "fe8fa438",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def currency_symbol_count(text):\n",
+        "    text = str(text)\n",
+        "    pattern = re.compile(r\"[$€£¥฿]\")\n",
+        "    return len(pattern.findall(text))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "0caacad9",
+      "metadata": {},
+      "source": [
+        "## Combine new Feature into Feature in Paper"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "2053b5a3",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def new_feature(data):\n",
+        "    data['url_count'] = data['Subject'].apply(url_count)+data['Body'].apply(url_count)\n",
+        "    data['currency_symbol_count'] = data['Subject'].apply(currency_symbol_count)+data['Body'].apply(currency_symbol_count)\n",
+        "    return data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "56366f1f",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "data = new_feature(data)\n",
+        "data.head()"
       ]
     },
     {
