gonna add function base on paper

--- a/source_code/feature_extraction_and_model.ipynb
+++ b/source_code/feature_extraction_and_model.ipynb
@@ -520,6 +520,50 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f63944f2",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def word_count(text):\n",
+        "    return text"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "7e0d623a",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def character_count(text):\n",
+        "    return text"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "89c62cbf",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def average_word_lenght(text):\n",
+        "    return text"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "6dc8b06d",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def sentence_count(text):\n",
+        "    return text"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "efd0b203-40a5-4e42-aaf5-d8e9aebb4f7d",
       "metadata": {
