--- a/source_code/feature_extraction_and_model.ipynb
+++ b/source_code/feature_extraction_and_model.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "36cb25df-e95c-4cf4-81ea-75498578aeeb",
       "metadata": {
         "id": "36cb25df-e95c-4cf4-81ea-75498578aeeb"
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "3SEXgNV9mKBk",
       "metadata": {
         "id": "3SEXgNV9mKBk"
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "bbc5bf42-fede-49c3-9bd2-c424fe7f93c1",
       "metadata": {
         "id": "bbc5bf42-fede-49c3-9bd2-c424fe7f93c1",
@@ -144,16 +144,20 @@
     {
       "cell_type": "markdown",
       "id": "0c58e1d2",
-      "metadata": {},
+      "metadata": {
+        "id": "0c58e1d2"
+      },
       "source": [
         "## List function for Data cleaning"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "5a54e196",
-      "metadata": {},
+      "metadata": {
+        "id": "5a54e196"
+      },
       "outputs": [],
       "source": [
         "def replace_new_line_symbol(text):\n",
@@ -163,16 +167,20 @@
     {
       "cell_type": "markdown",
       "id": "4bb2764f",
-      "metadata": {},
+      "metadata": {
+        "id": "4bb2764f"
+      },
       "source": [
-        "## Combine function into clean_data "
+        "## Combine function into clean_data"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "a5496aab",
-      "metadata": {},
+      "metadata": {
+        "id": "a5496aab"
+      },
       "outputs": [],
       "source": [
         "def clean_data(data):\n",
@@ -184,16 +192,21 @@
     {
       "cell_type": "markdown",
       "id": "72c5262e",
-      "metadata": {},
+      "metadata": {
+        "id": "72c5262e"
+      },
       "source": [
         "## Display Clean Data"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "e50ef12b",
-      "metadata": {},
+      "metadata": {
+        "id": "e50ef12b",
+        "outputId": "a63c36b4-6d5b-4a4a-b0cc-11da54753f39"
+      },
       "outputs": [
         {
           "data": {
@@ -317,7 +330,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "46fccc9d-23b8-45ab-8512-f51a5703159d",
       "metadata": {
         "id": "46fccc9d-23b8-45ab-8512-f51a5703159d"
@@ -367,7 +380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "3b8a4e39-5655-4fe1-934d-34bb5014538b",
       "metadata": {
         "id": "3b8a4e39-5655-4fe1-934d-34bb5014538b"
@@ -417,7 +430,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "db632f5e-74d1-4cab-be17-3e27d178d51d",
       "metadata": {
         "id": "db632f5e-74d1-4cab-be17-3e27d178d51d"
@@ -468,7 +481,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "8cecd801-8a5b-4517-ad12-2e3248de3150",
       "metadata": {
         "id": "8cecd801-8a5b-4517-ad12-2e3248de3150"
@@ -499,7 +512,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "id": "2fhinp8lm09Y",
       "metadata": {
         "id": "2fhinp8lm09Y"
@@ -523,7 +536,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "f63944f2",
-      "metadata": {},
+      "metadata": {
+        "id": "f63944f2"
+      },
       "outputs": [],
       "source": [
         "def word_count(text):\n",
@@ -534,7 +549,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "7e0d623a",
-      "metadata": {},
+      "metadata": {
+        "id": "7e0d623a"
+      },
       "outputs": [],
       "source": [
         "def character_count(text):\n",
@@ -545,7 +562,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "89c62cbf",
-      "metadata": {},
+      "metadata": {
+        "id": "89c62cbf"
+      },
       "outputs": [],
       "source": [
         "def average_word_lenght(text):\n",
@@ -556,7 +575,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "6dc8b06d",
-      "metadata": {},
+      "metadata": {
+        "id": "6dc8b06d"
+      },
       "outputs": [],
       "source": [
         "def sentence_count(text):\n",
@@ -594,16 +615,21 @@
     {
       "cell_type": "markdown",
       "id": "dcb3cc8a",
-      "metadata": {},
+      "metadata": {
+        "id": "dcb3cc8a"
+      },
       "source": [
         "## Display dataset after do feature extraction"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "id": "6863df9f",
-      "metadata": {},
+      "metadata": {
+        "id": "6863df9f",
+        "outputId": "17f69c38-e92e-4f89-c88c-52160918c0e5"
+      },
       "outputs": [
         {
           "data": {
@@ -808,7 +834,9 @@
     {
       "cell_type": "markdown",
       "id": "907db010",
-      "metadata": {},
+      "metadata": {
+        "id": "907db010"
+      },
       "source": [
         "## List new Feature Extraction"
       ]
@@ -817,7 +845,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "0454e42a",
-      "metadata": {},
+      "metadata": {
+        "id": "0454e42a"
+      },
       "outputs": [],
       "source": [
         "def url_count(text):\n",
@@ -833,7 +863,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "fe8fa438",
-      "metadata": {},
+      "metadata": {
+        "id": "fe8fa438"
+      },
       "outputs": [],
       "source": [
         "def currency_symbol_count(text):\n",
@@ -843,9 +875,65 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "def spam_keyword_count(text):\n",
+        "    text = str(text).lower()\n",
+        "    tokens = re.findall(r\"\\b\\w+\\b\", text)\n",
+        "\n",
+        "    spam_keywords = {\n",
+        "        \"free\", \"win\", \"winner\", \"prize\", \"bonus\",\n",
+        "        \"lottery\", \"cash\", \"credit\", \"offer\", \"deal\"\n",
+        "    }\n",
+        "\n",
+        "    return sum(1 for t in tokens if t in spam_keywords)"
+      ],
+      "metadata": {
+        "id": "as7zPVIVWHdn"
+      },
+      "id": "as7zPVIVWHdn",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def digit_char_ratio(text):\n",
+        "    text = str(text)\n",
+        "    chars = [c for c in text if not c.isspace()]\n",
+        "    if len(chars) == 0:\n",
+        "        return 0.0\n",
+        "    digit_chars = [c for c in chars if c.isdigit()]\n",
+        "    return len(digit_chars) / len(chars)"
+      ],
+      "metadata": {
+        "id": "38VRgf1KWQOE"
+      },
+      "id": "38VRgf1KWQOE",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def email_address_count(text):\n",
+        "    text = str(text)\n",
+        "    pattern = re.compile(r\"\\b[\\w\\.-]+@[\\w\\.-]+\\.\\w+\\b\")\n",
+        "    return len(pattern.findall(text))"
+      ],
+      "metadata": {
+        "id": "rcEVfmmaWU_x"
+      },
+      "id": "rcEVfmmaWU_x",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "id": "0caacad9",
-      "metadata": {},
+      "metadata": {
+        "id": "0caacad9"
+      },
       "source": [
         "## Combine new Feature into Feature in Paper"
       ]
@@ -854,7 +942,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "2053b5a3",
-      "metadata": {},
+      "metadata": {
+        "id": "2053b5a3"
+      },
       "outputs": [],
       "source": [
         "def new_feature(data):\n",
@@ -867,7 +957,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "56366f1f",
-      "metadata": {},
+      "metadata": {
+        "id": "56366f1f"
+      },
       "outputs": [],
       "source": [
         "data = new_feature(data)\n",
