--- a/source_code/feature_extraction_and_model.ipynb
+++ b/source_code/feature_extraction_and_model.ipynb
@@ -950,6 +950,10 @@
         "def new_feature(data):\n",
         "    data['url_count'] = data['Subject'].apply(url_count)+data['Body'].apply(url_count)\n",
         "    data['currency_symbol_count'] = data['Subject'].apply(currency_symbol_count)+data['Body'].apply(currency_symbol_count)\n",
+        "    data['spam_keyword_count'] = (data['Subject'].apply(spam_keyword_count) +data['Body'].apply(spam_keyword_count))\n",
+        "    data['email_address_count'] = (data['Subject'].apply(email_address_count) +data['Body'].apply(email_address_count))\n",
+        "    combined_text = data['Subject'].astype(str) + \" \" + data['Body'].astype(str)\n",
+        "    data['digit_char_ratio'] = combined_text.apply(digit_char_ratio)\n",
         "    return data"
       ]
     },
