--- a/source_code/feature_extraction_and_model.ipynb
+++ b/source_code/feature_extraction_and_model.ipynb
@@ -507,7 +507,8 @@
       "outputs": [],
       "source": [
         "def comma_count(data):\n",
-        "    return data"
+        "    text = str(text)\n",
+        "    return text.count(\",\")"
       ]
     },
     {
@@ -542,7 +543,9 @@
       "outputs": [],
       "source": [
         "def word_count(text):\n",
-        "    return text"
+        "    text = str(text)\n",
+        "    tokens = re.findall(r\"\\b\\w+\\b\", text)\n",
+        "    return len(tokens)"
       ]
     },
     {
@@ -555,7 +558,8 @@
       "outputs": [],
       "source": [
         "def character_count(text):\n",
-        "    return text"
+        "    text = str(text)\n",
+        "    return len(text)"
       ]
     },
     {
@@ -568,7 +572,12 @@
       "outputs": [],
       "source": [
         "def average_word_lenght(text):\n",
-        "    return text"
+        "    text = str(text)\n",
+        "    tokens = re.findall(r\"\\b\\w+\\b\", text)\n",
+        "    if not tokens:\n",
+        "        return 0.0\n",
+        "    total_chars = sum(len(t) for t in tokens)\n",
+        "    return total_chars / len(tokens)"
       ]
     },
     {
@@ -581,7 +590,10 @@
       "outputs": [],
       "source": [
         "def sentence_count(text):\n",
-        "    return text"
+        "    text = str(text)\n",
+        "    sentences = re.split(r\"[.!?]+\", text)\n",
+        "    sentences = [s.strip() for s in sentences if s.strip()]\n",
+        "    return len(sentences)"
       ]
     },
     {
@@ -950,10 +962,6 @@
         "def new_feature(data):\n",
         "    data['url_count'] = data['Subject'].apply(url_count)+data['Body'].apply(url_count)\n",
         "    data['currency_symbol_count'] = data['Subject'].apply(currency_symbol_count)+data['Body'].apply(currency_symbol_count)\n",
-        "    data['spam_keyword_count'] = (data['Subject'].apply(spam_keyword_count) +data['Body'].apply(spam_keyword_count))\n",
-        "    data['email_address_count'] = (data['Subject'].apply(email_address_count) +data['Body'].apply(email_address_count))\n",
-        "    combined_text = data['Subject'].astype(str) + \" \" + data['Body'].astype(str)\n",
-        "    data['digit_char_ratio'] = combined_text.apply(digit_char_ratio)\n",
         "    return data"
       ]
     },
