--- a/source_code/feature_extraction_and_model.ipynb
+++ b/source_code/feature_extraction_and_model.ipynb
@@ -597,6 +597,86 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "def number_of_pronouns(text):\n",
+        "    text = str(text).lower()\n",
+        "    tokens = re.findall(r\"\\b\\w+\\b\", text)\n",
+        "    pronouns = {\"i\", \"you\", \"he\", \"she\", \"it\", \"we\", \"they\"}\n",
+        "    return sum(1 for t in tokens if t in pronouns)"
+      ],
+      "metadata": {
+        "id": "wdbEyNqccK5q"
+      },
+      "id": "wdbEyNqccK5q",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def modal_verbs_count(text):\n",
+        "    text = str(text).lower()\n",
+        "    tokens = re.findall(r\"\\b\\w+\\b\", text)\n",
+        "    modal_verbs = {\"can\", \"could\", \"should\"}\n",
+        "    return sum(1 for t in tokens if t in modal_verbs)\n"
+      ],
+      "metadata": {
+        "id": "Li8paTyicQWK"
+      },
+      "id": "Li8paTyicQWK",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def uncertainty_adverbs_count(text):\n",
+        "    text = str(text).lower()\n",
+        "    tokens = re.findall(r\"\\b\\w+\\b\", text)\n",
+        "    uncertainty_words = {\"maybe\", \"possibly\", \"perhaps\"}\n",
+        "    return sum(1 for t in tokens if t in uncertainty_words)"
+      ],
+      "metadata": {
+        "id": "x_qT4FEKcgSw"
+      },
+      "id": "x_qT4FEKcgSw",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def technical_jargon_count(text):\n",
+        "    text = str(text).lower()\n",
+        "    tokens = re.findall(r\"\\b\\w+\\b\", text)\n",
+        "    jargon_words = {\"security\", \"account\", \"update\", \"technical\"}\n",
+        "    return sum(1 for t in tokens if t in jargon_words)"
+      ],
+      "metadata": {
+        "id": "Aa1BK1Cock81"
+      },
+      "id": "Aa1BK1Cock81",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def promotional_words_count(text):\n",
+        "    text = str(text).lower()\n",
+        "    tokens = re.findall(r\"\\b\\w+\\b\", text)\n",
+        "    promo_words = {\"offer\", \"deal\", \"free\"}\n",
+        "    return sum(1 for t in tokens if t in promo_words)"
+      ],
+      "metadata": {
+        "id": "tkI3k0ntcwmM"
+      },
+      "id": "tkI3k0ntcwmM",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "id": "efd0b203-40a5-4e42-aaf5-d8e9aebb4f7d",
       "metadata": {
