--- a/source_code/feature_extraction_and_model.ipynb
+++ b/source_code/feature_extraction_and_model.ipynb
@@ -677,6 +677,70 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "def politeness_markers_count(text):\n",
+        "    text = str(text).lower()\n",
+        "    tokens = re.findall(r\"\\b\\w+\\b\", text)\n",
+        "    markers = {\"please\", \"thank\", \"thanks\", \"appreciate\"}\n",
+        "    return sum(1 for t in tokens if t in markers)"
+      ],
+      "metadata": {
+        "id": "vL6kNG8ygAeI"
+      },
+      "id": "vL6kNG8ygAeI",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def aggressiveness_markers_count(text):\n",
+        "    text = str(text).lower()\n",
+        "    tokens = re.findall(r\"\\b\\w+\\b\", text)\n",
+        "    markers = {\"must\", \"now\", \"immediately\"}\n",
+        "    return sum(1 for t in tokens if t in markers)"
+      ],
+      "metadata": {
+        "id": "Bz-aDM1JgFCi"
+      },
+      "id": "Bz-aDM1JgFCi",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def conditional_phrases_count(text):\n",
+        "    text = str(text).lower()\n",
+        "    tokens = re.findall(r\"\\b\\w+\\b\", text)\n",
+        "    markers = {\"if\", \"unless\"}\n",
+        "    return sum(1 for t in tokens if t in markers)"
+      ],
+      "metadata": {
+        "id": "Z6zH6zrmgIQm"
+      },
+      "id": "Z6zH6zrmgIQm",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def personalisation_markers_count(text):\n",
+        "    text = str(text).lower()\n",
+        "    tokens = re.findall(r\"\\b\\w+\\b\", text)\n",
+        "    markers = {\"you\", \"your\"}\n",
+        "    return sum(1 for t in tokens if t in markers)"
+      ],
+      "metadata": {
+        "id": "EqQJK1lPgMtN"
+      },
+      "id": "EqQJK1lPgMtN",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "id": "efd0b203-40a5-4e42-aaf5-d8e9aebb4f7d",
       "metadata": {
