--- a/source_code/feature_extraction_and_model.ipynb
+++ b/source_code/feature_extraction_and_model.ipynb
@@ -19,19 +19,9 @@
       },
       "outputs": [],
       "source": [
-        "import pandas as pd"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "3SEXgNV9mKBk",
-      "metadata": {
-        "id": "3SEXgNV9mKBk"
-      },
-      "outputs": [],
-      "source": [
-        "import re"
+        "import pandas as pd\n",
+        "import re\n",
+        "import string"
       ]
     },
     {
@@ -324,8 +314,13 @@
       },
       "outputs": [],
       "source": [
-        "def Imperative_verbs_count(data):\n",
-        "    return data"
+        "def imperative_verbs_count(text):\n",
+        "\n",
+        "    pattern = r'\\b(click|verify|submit|download|update)\\b'\n",
+        "\n",
+        "    matches = re.findall(pattern, text, flags=re.IGNORECASE)\n",
+        "\n",
+        "    return len(matches)"
       ]
     },
     {
@@ -374,8 +369,13 @@
       },
       "outputs": [],
       "source": [
-        "def first_person_pronoun_counts(data):\n",
-        "    return data"
+        "def first_person_pronoun_count(text):\n",
+        "\n",
+        "    pattern = r'\\b(i|we)\\b'\n",
+        "\n",
+        "    matches = re.findall(pattern, text, flags=re.IGNORECASE)\n",
+        "\n",
+        "    return len(matches)"
       ]
     },
     {
@@ -424,8 +424,13 @@
       },
       "outputs": [],
       "source": [
-        "def urgency_markers_count(data):\n",
-        "    return data"
+        "def urgency_markers_count(text):\n",
+        "\n",
+        "    pattern = r'\\b(urgent|asap|immediately)\\b'\n",
+        "\n",
+        "    matches = re.findall(pattern, text, flags=re.IGNORECASE)\n",
+        "\n",
+        "    return len(matches)"
       ]
     },
     {
@@ -462,8 +467,13 @@
       },
       "outputs": [],
       "source": [
-        "def second_person_pronoun_counts(data):\n",
-        "    return data"
+        "def second_person_pronoun_count(text):\n",
+        "\n",
+        "    pattern = r'\\b(you)\\b'\n",
+        "\n",
+        "    matches = re.findall(pattern, text, flags=re.IGNORECASE)\n",
+        "\n",
+        "    return len(matches)"
       ]
     },
     {
@@ -475,8 +485,13 @@
       },
       "outputs": [],
       "source": [
-        "def freq(data):\n",
-        "    return data"
+        "def freq_(text):\n",
+        "\n",
+        "    pattern = r'[.,!:()/\"\\\\-]'\n",
+        "\n",
+        "    matches = re.findall(pattern, text)\n",
+        "\n",
+        "    return len(matches)"
       ]
     },
     {
@@ -507,9 +522,49 @@
       "outputs": [],
       "source": [
         "def comma_count(data):\n",
-        "    text = str(text)\n",
-        "    return text.count(\",\")"
+        "\n",
+        "    pattern = r'[,]'\n",
+        "\n",
+        "    matches = re.findall(pattern, text)\n",
+        "\n",
+        "    return len(matches)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def colon_count(data):\n",
+        "\n",
+        "    pattern = r'[:]'\n",
+        "\n",
+        "    matches = re.findall(pattern, text)\n",
+        "\n",
+        "    return len(matches)"
+      ],
+      "metadata": {
+        "id": "q9rMlYfjq_D_"
+      },
+      "id": "q9rMlYfjq_D_",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def semicolon_count(data):\n",
+        "\n",
+        "  pattern = r'[;]'\n",
+        "\n",
+        "  matches = re.findall(pattern, text)\n",
+        "\n",
+        "  return len(matches)\n"
+      ],
+      "metadata": {
+        "id": "0ZJAtlnWrBQP"
+      },
+      "id": "0ZJAtlnWrBQP",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
