--- a/source_code/feature_extraction_and_model.ipynb
+++ b/source_code/feature_extraction_and_model.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "36cb25df-e95c-4cf4-81ea-75498578aeeb",
       "metadata": {
         "id": "36cb25df-e95c-4cf4-81ea-75498578aeeb"
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "63b0442d-548d-48e4-9385-5875345b39e2",
       "metadata": {
         "id": "63b0442d-548d-48e4-9385-5875345b39e2"
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "bbc5bf42-fede-49c3-9bd2-c424fe7f93c1",
       "metadata": {
         "colab": {
@@ -370,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "5a54e196",
       "metadata": {
         "id": "5a54e196"
@@ -393,7 +393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "a5496aab",
       "metadata": {
         "id": "a5496aab"
@@ -418,7 +418,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "e50ef12b",
       "metadata": {
         "colab": {
@@ -755,7 +755,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "f923f2a7-ab0a-4ed4-9d14-35094f7bd0fd",
       "metadata": {
         "id": "f923f2a7-ab0a-4ed4-9d14-35094f7bd0fd"
@@ -773,7 +773,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "46fccc9d-23b8-45ab-8512-f51a5703159d",
       "metadata": {
         "id": "46fccc9d-23b8-45ab-8512-f51a5703159d"
@@ -810,7 +810,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "459cc83a-ac6c-431d-aa04-3ae358c21877",
       "metadata": {
         "id": "459cc83a-ac6c-431d-aa04-3ae358c21877"
@@ -828,7 +828,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "3b8a4e39-5655-4fe1-934d-34bb5014538b",
       "metadata": {
         "id": "3b8a4e39-5655-4fe1-934d-34bb5014538b"
@@ -867,7 +867,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "72b923a3-457f-48d8-a74b-ee6d1daf6ae3",
       "metadata": {
         "id": "72b923a3-457f-48d8-a74b-ee6d1daf6ae3"
@@ -885,7 +885,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "db632f5e-74d1-4cab-be17-3e27d178d51d",
       "metadata": {
         "id": "db632f5e-74d1-4cab-be17-3e27d178d51d"
@@ -910,7 +910,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "8281aea1-8f54-4be9-bf71-d640a4a43cec",
       "metadata": {
         "id": "8281aea1-8f54-4be9-bf71-d640a4a43cec"
@@ -928,7 +928,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "d63c14b5-ff5e-4e46-bfba-b6dab97bf1ce",
       "metadata": {
         "id": "d63c14b5-ff5e-4e46-bfba-b6dab97bf1ce"
@@ -946,7 +946,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "8cecd801-8a5b-4517-ad12-2e3248de3150",
       "metadata": {
         "id": "8cecd801-8a5b-4517-ad12-2e3248de3150"
@@ -964,7 +964,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "1c8c6b36-7019-4a17-8bf7-cb40d63c2d3e",
       "metadata": {
         "id": "1c8c6b36-7019-4a17-8bf7-cb40d63c2d3e"
@@ -982,7 +982,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "q9rMlYfjq_D_",
       "metadata": {
         "id": "q9rMlYfjq_D_"
@@ -1000,7 +1000,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "0ZJAtlnWrBQP",
       "metadata": {
         "id": "0ZJAtlnWrBQP"
@@ -1018,7 +1018,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "2fhinp8lm09Y",
       "metadata": {
         "id": "2fhinp8lm09Y"
@@ -1040,7 +1040,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "f63944f2",
       "metadata": {
         "id": "f63944f2"
@@ -1055,7 +1055,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "7e0d623a",
       "metadata": {
         "id": "7e0d623a"
@@ -1069,7 +1069,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "1123fd0f",
       "metadata": {
         "id": "1123fd0f"
@@ -1082,7 +1082,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "6dc8b06d",
       "metadata": {
         "id": "6dc8b06d"
@@ -1098,7 +1098,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "wdbEyNqccK5q",
       "metadata": {
         "id": "wdbEyNqccK5q"
@@ -1114,7 +1114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "Li8paTyicQWK",
       "metadata": {
         "id": "Li8paTyicQWK"
@@ -1130,7 +1130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "x_qT4FEKcgSw",
       "metadata": {
         "id": "x_qT4FEKcgSw"
@@ -1146,7 +1146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "Aa1BK1Cock81",
       "metadata": {
         "id": "Aa1BK1Cock81"
@@ -1162,7 +1162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "tkI3k0ntcwmM",
       "metadata": {
         "id": "tkI3k0ntcwmM"
@@ -1178,7 +1178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "vL6kNG8ygAeI",
       "metadata": {
         "id": "vL6kNG8ygAeI"
@@ -1194,7 +1194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "id": "Bz-aDM1JgFCi",
       "metadata": {
         "id": "Bz-aDM1JgFCi"
@@ -1210,7 +1210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "id": "Z6zH6zrmgIQm",
       "metadata": {
         "id": "Z6zH6zrmgIQm"
@@ -1226,7 +1226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "id": "EqQJK1lPgMtN",
       "metadata": {
         "id": "EqQJK1lPgMtN"
@@ -1242,7 +1242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "id": "2526f91a",
       "metadata": {
         "id": "2526f91a"
@@ -1268,7 +1268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "id": "34ace0a7-d7a4-40fe-974c-c587f7deb8ef",
       "metadata": {
         "id": "34ace0a7-d7a4-40fe-974c-c587f7deb8ef"
@@ -1318,7 +1318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "id": "6863df9f",
       "metadata": {
         "colab": {
@@ -1797,7 +1797,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "id": "VEK4iv7b_Cp_",
       "metadata": {
         "colab": {
@@ -1980,7 +1980,7 @@
         "id": "FXo7gy-rrQxt",
         "outputId": "1499f75f-dc4b-409c-ad4c-e51d88cd2695"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2029,7 +2029,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "id": "7M3BohDuvWIi",
       "metadata": {
         "colab": {
@@ -2090,7 +2090,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "id": "LINZ7p7RvWcJ",
       "metadata": {
         "colab": {
@@ -2160,7 +2160,7 @@
         "sns.barplot(x='Importance', y='Feature', data=importance_df, palette=colors)\n",
         "\n",
         "plt.title('Feature Importance (Linear SVM Coefficients)')\n",
-        "plt.xlabel('Coefficient Value ( < 0 = Ham Indicator | > 0 = Spam Indicator )')\n",
+        "plt.xlabel('Coefficient Value ( < 0 = Legitimate Indicator | > 0 = Phishing Indicator )')\n",
         "plt.axvline(x=0, color='black', linestyle='--') # Center line\n",
         "plt.show()"
       ]
@@ -2177,7 +2177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "id": "0_MYms97YaIs",
       "metadata": {
         "id": "0_MYms97YaIs"
@@ -2190,7 +2190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "id": "VVl0OTCfS5yq",
       "metadata": {
         "colab": {
@@ -2285,7 +2285,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "id": "0454e42a",
       "metadata": {
         "id": "0454e42a"
@@ -2303,7 +2303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "id": "fe8fa438",
       "metadata": {
         "id": "fe8fa438"
@@ -2318,7 +2318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "id": "as7zPVIVWHdn",
       "metadata": {
         "id": "as7zPVIVWHdn"
@@ -2339,7 +2339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "id": "38VRgf1KWQOE",
       "metadata": {
         "id": "38VRgf1KWQOE"
@@ -2357,7 +2357,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "id": "rcEVfmmaWU_x",
       "metadata": {
         "id": "rcEVfmmaWU_x"
@@ -2372,7 +2372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "id": "339a61c4",
       "metadata": {
         "id": "339a61c4"
@@ -2400,7 +2400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "id": "2053b5a3",
       "metadata": {
         "id": "2053b5a3"
@@ -2420,7 +2420,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "id": "56366f1f",
       "metadata": {
         "colab": {
